--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         {                           // Phaser.State object
           preload: function() {
 
-			game.load.baseURL = 'https://raw.githubusercontent.com/sanchothefat/phaser-demo/master/';
+			game.load.baseURL = 'https://render.githubusercontent.com/sanchothefat/phaser-demo/master/';
 			game.load.crossOrigin = 'anonymous';
 
             game.load.image( 'background', 'assets/runners/desert_BG.png' );
