Using github.io URL now

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         {                           // Phaser.State object
           preload: function() {
 
-			game.load.baseURL = 'https://render.githubusercontent.com/sanchothefat/phaser-demo/master/';
-			game.load.crossOrigin = 'anonymous';
+			game.load.baseURL = 'http://sanchothefat.github.io/phaser-demo/';
 
             game.load.image( 'background', 'assets/runners/desert_BG.png' );
             game.load.image( 'background-bottom', 'assets/runners/desert_BG_bottom.png' );
