--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               5,
               5,
               'Score: ' + this.score,
-              { fill: '#fff', font: '20px Futura' }
+              { fill: '#fff', font: '20px Futura, "Trebuchet MS", Arial, sans-serif' }
             );
 
             // keep the bottom background on top of everything else for poops & giggles
