Fix font for game over text

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               game.world.centerY,           // y
               'Rubbish!',                   // text
               {                             // style object (based on canvas & pixi.js)
-                font: '65px Futura',
+                font: '65px Futura, "Trebuchet MS", Arial, sans-serif',
                 fill: '#fff',
                 align: 'center'
               }
